# pgdl

./: README.md
pgdl/: Autodiff.cpp  Autodiff.h  AutodiffMethod.cpp  AutodiffMethod.h  CMakeLists.txt  CreateNode.cpp  CreateNode.h  CreateNodeClient.cpp  CreateNodeClient.h  Execute.cpp  Execute.h  Graph.cpp  Graph.h  Makefile  Manager.cpp  Manager.h  ManagerClient.cpp  ManagerClient.h  ModelClient.cpp  ModelClient.h  Wrapper.cpp  Wrapper.h  aa  main.cpp  pgdl--1.0.sql  pgdl.c  pgdl.control
pypgdl/: get_time.py  pypgdl.py  pypgdl1.py
pypgdl/Conv_mnist/: mnist_time.py  mnist_time_tf.py  test_conv.py  test_conv1.py  test_conv2.py  test_conv3.py  test_conv4.py  tf_conv.py  tf_conv1.py
pypgdl/LR_epsilon/: epsilon_time.py  epsilon_time_tf.py  load_epsilon_keras.py  test_epsilon.py  test_epsilon1.py  tf_epsilon.py
pypgdl/Linear_usa_housing/: test_usa_housing.py  tf_usa_housing.py  usa_housing_time.py  usa_housing_time_tf.py
pypgdl/Vgg16_cifa10/: cifa10_time.py  cifa10_time_tf.py  test_conv.py  test_vgg16.py  test_vgg161.py  tf_vgg16.py
pypgdl/create_table/: create_1.py  create_2.py
pypgdl/data/: USA_main.py  main.py
